--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
     "singleQuote": false,
     "trailingComma": "all",
     "jsxBracketSameLine": true,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "printWidth": 88
 }
